--- a/templates/learner.html
+++ b/templates/learner.html
@@ -139,6 +139,7 @@
 {% block scripts %}
 <script>
 const roomCode = '{{ room.code }}';
+const learnerid = '{{ learner_id }}';
 
 function getStatusSymbol(status) {
     const statusMap = {
