--- a/templates/poll.html
+++ b/templates/poll.html
@@ -27,7 +27,7 @@
             </tr>
           </thead>
           <tbody>
-            {% for status, count in status_counts.items() %}
+            {% for status, count in sorted_status_counts %}
             <tr>
               <td style="text-align: left;">
                 {% for i in range(count) %}
