--- a/templates/poker.html
+++ b/templates/poker.html
@@ -6,9 +6,46 @@
 {% block content %}
 <div class="row">
   <h1>Planning Poker</h1>
+  <div class="col-gap"></div>
+  <div class="col-gap"></div>
+  <a href="?show=true">
+    <button class="button1">Show</button>
+  </a>
+  <div class="col-gap"></div>
+  <a href="?show=false">
+    <button class="button2">Hide</button>
+  </a>
 </div>
-<div class="row-gap"></div>
+<div class="row-gap" style="height: 30px;"></div>
 
+<!-- ESTIMATES -->
+<div class="main tutor">
+  <div class="row">
+    {% for learner in learner_estimates %}
+      <div class="card">
+        <div class="row3">
+          <h2>{{ learner.name }}</h2>
+        </div>
+        <div class="status poker">
+          <div class="row2">
+            {% if show_values %}
+              {{ learner.estimate }}
+            {% else %}
+              <div class="card-back {% if learner.estimate == '' %}no-estimate{% endif %}"></div>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+      {% if not loop.last %}
+        <div class="col-gap"></div>
+      {% endif %}
+    {% endfor %}
+  </div>
+</div>
+
+<!-- STATISTICS -->
+{% if show_values %}
+<div class="row-gap" style="height: 30px;"></div>
 <div class="main learner">
   <div class="panel poker">
 
@@ -82,4 +119,6 @@
 
   </div>
 </div>
+{% endif %}
+
 {% endblock %}
