Show avg calculation

--- a/templates/poker.html
+++ b/templates/poker.html
@@ -118,7 +118,7 @@
             {{ stats.get('average', '--') }}
           </div>
         </div>
-        <div class="row3">average</div>
+        <div class="row3">{{ average_text }}</div>
       </div>
 
       <div class="col-gap"></div> <!-- Gap between boxes -->
