--- a/templates/poker.html
+++ b/templates/poker.html
@@ -22,14 +22,14 @@
 <div class="main tutor">
   <div class="cards-container">
     {% for learner in learner_estimates %}
-      <div class="card {% if learner.estimate not in ('','away','coffee','?','hand-up') %}has-estimate{% else %}no-estimate{% endif %}">
+      <div class="card {% if learner.estimate not in ('','?','away','coffee','hand-up') %}has-estimate{% else %}no-estimate{% endif %}">
         <div class="row3">
           <h3>{{ learner.name | default('-', true) }}</h3>
         </div>
         <div class="status poker">
           <div class="row2">
             {% if show_values %}
-              {% if learner.estimate not in ('','away','coffee','?') %}
+              {% if learner.estimate not in ('','?','away','coffee','hand-up') %}
                 {{ learner.estimate }}
               {% endif %}
             {% else %}
