add hand-up to poker

--- a/templates/poker.html
+++ b/templates/poker.html
@@ -43,7 +43,7 @@
                 {% elif learner.estimate == '?' %}
                   ?
                 {% elif learner.estimate == 'hand-up' %}
-                  <i class="far fa-hand-paper"></i>
+                  <i class="fas fa-hand-paper"></i>
                 {% endif %}
               </div>
             {% endif %}
